--- a/_config.yml
+++ b/_config.yml
@@ -41,6 +41,10 @@ collections:
   all-courses:
     output: true
     permalink: /all-courses/:title
+  events:
+    output: true
+  announcements:
+    output: true
 
 exclude: ["sources/", "purged/", "out/", "tarball/", "docs/", ".metals/", ".ammonite/"]
 
