--- a/_data/inspire-alumni.yaml
+++ b/_data/inspire-alumni.yaml
@@ -1,3 +1,11 @@
+- name: "Sarang Sane"  
+  position: "INSPIRE Faculty"  
+  phd: "TIFR"  
+  area: "Commutative algebra"  
+  start: "2014"  
+  end: "2014 "  
+  present: "IIT, Madras"  
+
 - name: "Koushik Saha"  
   position: "INSPIRE Faculty"  
   phd: "ISI"  
